@@ -26,7 +26,7 @@
 	<li>select the root folder where you downloaded the red5 repository,(e.g. c:\projects\osflash\red5) and hit ok</li>
 	<li>Make sure red5 is selected in the projects area and hit "Finish"</li>
 	<li>Eclipse should automtically build the project, you can force a build from the "project" menu and selecting "build project"</li>
-	<li>To run the server, in the package explorer panel, select the "Server' file under src/org.red5.server/Server.java , right click on the file and select "Run As" and select "Java Application" </li>
+	<li>To run the server, in the package explorer panel, select the "Server' file under src/org.red5.server/Standalone.java , right click on the file and select "Run As" and select "Java Application" </li>
 	<li>Red 5 will start running</li> <br>
 	
 	If you get an error in the console like :
